--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <title>Friends | Kakao Clone</title>
 </head>
+
 <body>
     <div class="staus-bar">
         <div class="status-bar__column">
@@ -25,10 +27,66 @@
             <h1 class="header__title">Friends</h1>
         </div>
         <div class="header__header-column">
-            <span class="header__icon"><i class="fas fa-search"></i></span>            
+            <span class="header__icon"><i class="fas fa-search"></i></span>
             <span class="header__icon"><i class="fas fa-cog"> </i></span>
         </div>
     </header>
+    <main class="friends">
+        <header class="friends__header">
+            <div class="friends__friend friend friend--lg">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar" />
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Dongwon
+                        </span>
+                        <span class="friend__status">
+                            dongwon.kim
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div class="friends__plus">
+            <h5 class="friends__title">Plus Friend</h5>
+            <div class="friends__friend friend">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar" />
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Plus Friend
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <ul class="firends__list">
+            <h5 class="friends__title">
+                Friends 14
+            </h5>
+            <li class="friends__friend friend friend--lg">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar" />
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Dongwon
+                        </span>
+                        <span class="friend__status">
+                            dongwon.kim
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <div class="friend__now-listening">
+                        <span>
+                            Bewhy - GARASADAE
+                        </span>
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
@@ -51,8 +109,9 @@
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
-            
+
         </ul>
     </nav>
 </body>
+
 </html>
