--- a/more.html
+++ b/more.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <title>More | Kakao Clone</title>
 </head>
+
 <body>
     <div class="staus-bar">
         <div class="status-bar__column">
@@ -30,6 +32,83 @@
             <span class="header__icon"><i class="fas fa-cog"> </i></span>
         </div>
     </header>
+    <main class="more">
+        <header class="more__header">
+            <div class="friends__friend friend friend--lg">
+                <div class="friend__column">
+                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar" />
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Dongwon
+                        </span>
+                        <span class="friend__status">
+                            dongwon.kim@gmail.com
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <i class="far fa-comment-alt fa-2x"></i>
+                </div>
+            </div>
+            <ul class="more__btn-list">
+                <li class="more__btn">
+                    <span class="more__btn-icon">
+                        <i class="far fa-smile fa-2x"></i>
+                    </span>
+                    <span class="more__btn-title">
+                        Emotions
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more__btn-icon">
+                        <i class="fas fa-brush fa-2x"></i>
+                    </span>
+                    <span class="more__btn-title">
+                        Themes
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more__btn-icon">
+                        <i class="fab fa-kickstarter-k fa-2x"></i>
+                    </span>
+                    <span class="more__btn-title">
+                        Account
+                    </span>
+                </li>
+            </ul>
+        </header>
+        <section class="more__suggestions">
+            <h5 class="more__title">
+                Suggestions
+            </h5>
+            <ul class="more__suggestions-list">
+                <li class="more__suggestion suggestion">
+                    <span class="suggetion__icon">
+                        <i class="fas fa-quote-right fa-2x"></i>
+                    </span>
+                    <span class="suggestion__title">
+                        kakao Story
+                    </span>
+                </li>
+                <li class="more__suggestion suggestion">
+                    <span class="suggetion__icon">
+                        <i class="fas fa-beer fa-2x"></i>
+                    </span>
+                    <span class="suggestion__title">
+                        kakao friends
+                    </span>
+                </li>
+                <li class="more__suggestion suggestion">
+                    <span class="suggetion__icon">
+                        <i class="fas fa-gamepad fa-2x"></i>
+                    </span>
+                    <span class="suggestion__title">
+                        Friends Gem
+                    </span>
+                </li>
+            </ul>
+        </section>
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
@@ -52,8 +131,9 @@
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
-            
+
         </ul>
     </nav>
 </body>
+
 </html>
