--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
     <main class="chats">
         <ul class="chats__list">
             <li class="chats__chat chat">
-                <div class="chat__column">
-                    <img src="images/avatar.jpg" alt="" class="chat__avatar g-avatar">
-                    <div class="chat__content">
-                        <span class="chat__username">
-                            Dongwon
-                        </span>
-                        <span class="chat__preview">
-                            Going home
+                <a href="chat.html">
+                    <div class="chat__column">
+                        <img src="images/avatar.jpg" alt="" class="chat__avatar g-avatar">
+                        <div class="chat__content">
+                            <span class="chat__username">
+                                Dongwon
+                            </span>
+                            <span class="chat__preview">
+                                Going home
+                            </span>
+                        </div>
+                    </div>
+                    <div class="chat__column">
+                        <span class="chat__tiemstamp">
+                            Yesterday
                         </span>
                     </div>
-                </div>
-                <div class="chat__column">
-                    <span class="chat__tiemstamp">
-                        Yesterday
-                    </span>
-                </div>
+                </a>
             </li>
         </ul>
     </main>
@@ -74,7 +76,6 @@
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
-            
         </ul>
     </nav>
 </body>
