--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Chat | Kakao Clone</title>
 </head>
 <body>
-    <div class="staus-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">12:34</span>
         </div>
