--- a/chat.html
+++ b/chat.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="staus-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">12:34</span>
         </div>
@@ -26,13 +26,13 @@
     <header class="header">
         <div class="header__header-column">
             <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
             <h1 class="header__title">Best Friend</h1>
         </div>
         <div class="header__header-column">
             <span class="header__icon"><i class="fas fa-search"></i></span>
-            <div class="header__icon"><i class="fas fa-bars"></i></div>
+            <span class="header__icon"><i class="fas fa-bars"></i></span>
         </div>
     </header>
     <main class="chat">
