--- a/find.html
+++ b/find.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="staus-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">12:34</span>
         </div>
