--- a/friends.html
+++ b/friends.html
@@ -52,7 +52,7 @@
             <h5 class="friends__title">Plus Friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar" />
+                    <img src="images/avatar.jpg" alt="" class="friend__avatar" />
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -67,7 +67,7 @@
             </h5>
             <li class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar" />
+                    <img src="images/avatar.jpg" alt="" class="friend__avatar" />
                     <div class="friend__content">
                         <span class="friend__name">
                             Dongwon
