--- a/more.html
+++ b/more.html
@@ -88,7 +88,7 @@
             </h5>
             <ul class="more__suggestions-list">
                 <li class="more__suggestion suggestion">
-                    <span class="suggetion__icon">
+                    <span class="suggestion__icon">
                         <i class="fas fa-quote-right fa-2x"></i>
                     </span>
                     <span class="suggestion__title">
@@ -96,7 +96,7 @@
                     </span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <span class="suggetion__icon">
+                    <span class="suggestion__icon">
                         <i class="fas fa-beer fa-2x"></i>
                     </span>
                     <span class="suggestion__title">
@@ -104,7 +104,7 @@
                     </span>
                 </li>
                 <li class="more__suggestion suggestion">
-                    <span class="suggetion__icon">
+                    <span class="suggestion__icon">
                         <i class="fas fa-gamepad fa-2x"></i>
                     </span>
                     <span class="suggestion__title">
