--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,7 @@
     <title>Chat | Kakao Clone</title>
 </head>
 
-<body>
+<body class="chats-body">
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">12:34</span>
@@ -35,7 +35,7 @@
             <span class="header__icon"><i class="fas fa-bars"></i></span>
         </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
             <li class="incoming-message message">
@@ -48,7 +48,7 @@
                 </div>
                 <span class="message__tiemstamp"></span>
             </li>
-            <li class="incoming-message message">
+            <li class="sent-message message">
                 <span class="message__tiemstamp"></span>
                 <div class="message__content">
                     <div class="message__bubble">
