friend pages update

--- a/friends.html
+++ b/friends.html
@@ -67,7 +67,7 @@
           </div>
         </div>
       </div>
-      <ul class="firends__list">
+      <ul class="friends__list">
         <h5 class="friends__title">
           Friends 14
         </h5>
